[tool.poetry]
name = "classification"
version = "0.1.0"
description = "A sample classification model template"
authors = ["Soham Jaiswal <sohamjaiswal10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
numpy = "1.24.3"
pandas = "2.1.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.10.0"
matplotlib = "3.8.0"
scikit-learn = "1.3.0"
python-mnist = "^0.7"
pydot = "^1.4.2"
pydotplus = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
